...
    <GestureHandlerRootView style={{ flex: 1 }}>
      <ErrorBoundary>
        <HeroUINativeProvider>
          <AuthProvider>
          <ChildProvider>
            <Stack screenOptions={{ headerShown: false }}>
              <Stack.Screen name="index" />
              <Stack.Screen
                name="(auth)"
                options={{ animation: 'slide_from_bottom' }}
              />
              <Stack.Screen
                name="(onboarding)"
...
